# ChangeLog for net-dns/ldns-utils
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Dec 2008; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -ldns-utils-1.4.0.ebuild, +ldns-utils-1.4.1.ebuild:
  version bump

  21 Nov 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> metadata.xml:
  Remove not used tags

  21 Nov 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  ldns-utils-1.4.0.ebuild:
  Quoting to make repoman happy

  20 Nov 2008; Tom Hendrikx (whyscream) <tom@whyscream.net>
  +ldns-utils-1.4.0.ebuild, +metadata.xml:
  New ebuild for net-dns/ldns-utils
