@@ -1,4 +1,4 @@
 DIST ldns-1.4.1.tar.gz 777964 RMD160 61adf13996707ae487b998250c0f8db4f2f83f2d SHA1 13f962b05ee0804b84ed59cdc39e609c872a4827 SHA256 fa101cb2e53e3fcdefd0bc2840e35df0f24636998af21c9dcd8c922c9bcbbae4
-EBUILD ldns-utils-1.4.1.ebuild 838 RMD160 5d1900ec85d9d20b2a7a9b69e058912d332aaf37 SHA1 609809e4822186520967f5a2507bf9f6b9d3570d SHA256 9434d8a31bcdf25fc110a49b685cf46a5b68753fb419fb67cedf793e30e4972b
-MISC ChangeLog 605 RMD160 2ceb99ebcb263c43048138981cb0280467e3bcbb SHA1 000b226c2c92bafe5ede834b12eabf3bf6e1b6a5 SHA256 b317172ce51246c707cba518971eb7b6c68c1c211f52dbb8f332ae32e5b25ca8
+EBUILD ldns-utils-1.4.1.ebuild 854 RMD160 464dbca72891cfa0dd968e7b33687f6e00bcaa9e SHA1 decf36e3dbd2c9ed1f5019643829ac872757f3ba SHA256 7e105dd9ae1f919bf5b0499a692f3bf4753cdcb65294900ae3c97cb86a224687
+MISC ChangeLog 726 RMD160 c448171689c08a94250193d651b85316dbba74f4 SHA1 ddc8644a02a68fecc0fae3d23006d12794399326 SHA256 bf9e4a32ba518a32ba8d830715fba6317610b0cc4917d352a28ff25a411cb635
 MISC metadata.xml 171 RMD160 ed284df01c230fc7990a6b5888b39166d23f29ba SHA1 f3d64a69044b710e23fb874b3ee4cd338858c8b4 SHA256 a7b30fbacd0e4c312c07a3efac112a3794c81d134442d8104325734d03425adf
