@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/ldns-utils
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  ldns-utils-1.4.1.ebuild:
+  Add suggested RDEPEND=${DEPEND}
 
   28 Dec 2008; Tom Hendrikx (whyscream) <tom@whyscream.net>
   -ldns-utils-1.4.0.ebuild, +ldns-utils-1.4.1.ebuild:
